@@ -1,3 +1,7 @@
+2005-04-07  Jaap A. Haitsma  <jaap@haitsma.org>
+
+	* user-group-xml.c: plugged some leaks. Fixes #172158
+
 2005-03-07  Carlos Garnacho Parro  <carlosg@gnome.org>
 
 	* Release 1.2.0
